# gimpsep-clm-project

./: .gitignore  CMakeLists.txt  Consignes-rapport_oral_notation.docx  MAKE_List.txt  Makefile.txt  README.md  diagramClass.puml
final/: Image.cpp  Image.h  Image_functions.cpp  Image_functions.h  main.cpp
src/: Makefile
src/lib/: EnhancedWindow.h  cvui.h
src/main/: Image.cpp  Image.h  ImageApp.cpp  ImageApp.h  ImageHandler.cpp  ImageHandler.h  ImageTreatment_Charles.cpp  ImageTreatment_Charles.h  ImageTreatment_Maxime.cpp  ImageTreatment_Maxime.h  Image_Lucie.cpp  Image_Lucie.h  PanoramaCreator.cpp  PanoramaCreator.h  main.cpp
src/ressources/icon/: imageTransformer.py  sources.txt
